--- a/index.html
+++ b/index.html
@@ -120,10 +120,10 @@
         <div>
             <h2>contact us</h2>
             <form action="">
-                <input type="text" name="name" id="name" class="name" placeholder="Name">
-                <input type="number" name="phone" id="phone" class="phone" placeholder="Phone Number">
-                <input type="email" name="email" id="email" class="email" placeholder="Email">
-                <input type="text" name="message" id="message" class="message" placeholder="Message">
+                <input type="text" name="name" id="name" class="name" placeholder="Name" required>
+                <input type="number" name="phone" id="phone" class="phone" placeholder="Phone Number" required >
+                <input type="email" name="email" id="email" class="email" placeholder="Email" required>
+                <input type="text" name="message" id="message" class="message" placeholder="Message" required>
                 <button class="send" type="submit">send</button>
             </form>
         </div>
