--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
             <img src="./OneDrive_1_3-27-2025/instagram.png" alt="instagram">
             <h3>subscribe now</h3>
             <form action="">
-                <input type="text" name="subscribe" class="subscribe">
+                <input type="text" name="subscribe" class="subscribe" required>
                 <button type="submit">subscribe</button>
             </form>
         </div>
