--- a/contact-us.html
+++ b/contact-us.html
@@ -28,10 +28,10 @@
         <div>
             <h2>contact us</h2>
             <form action="">
-                <input type="text" name="name" id="name" class="name" placeholder="Name">
-                <input type="number" name="phone" id="phone" class="phone" placeholder="Phone Number">
-                <input type="email" name="email" id="email" class="email" placeholder="Email">
-                <input type="text" name="message" id="message" class="message" placeholder="Message">
+                <input type="text" name="name" id="name" class="name" placeholder="Name" required>
+                <input type="number" name="phone" id="phone" class="phone" placeholder="Phone Number" required>
+                <input type="email" name="email" id="email" class="email" placeholder="Email" required>
+                <input type="text" name="message" id="message" class="message" placeholder="Message" required>
                 <button class="send" type="submit">send</button>
             </form>
         </div>
@@ -86,7 +86,7 @@
             <img src="./OneDrive_1_3-27-2025/instagram.png" alt="instagram">
             <h3>subscribe now</h3>
             <form action="">
-                <input type="text" name="subscribe" class="subscribe">
+                <input type="text" name="subscribe" class="subscribe" required>
                 <button type="submit">subscribe</button>
             </form>
         </div>
